internal/ast/testdata/tests/errors/contracts/eof_after_e_in_else.rql
contract IfEOF() -> void {
    if x {

    } e
